[project]
name = "fastapi-security"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kentarokk", email = "ken.k.jul2@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_security"]
