[project]
name = "fastapi-security"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "kentarokk", email = "ken.k.jul2@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.31.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_security"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN1",   # missing type self and cls
    "E999",   # syntax error
    "UP027",  # unpacked list comprehension
    "PT004",  # pytest missing fixture name underscore
    "PT005",  # pytest incorrect fixture name underscore
    "D1",     # undocumented
    "TD001",  # invalid todo tag
    "TD002",  # missing todo author
    "TD003",  # missing todo link
    "PD011",  # pandas use of dot values
]
unfixable = [
    "F401",   # unused import
    "F841",   # unused variable
    "ERA001", # commented out code
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.rye.scripts]
item = { cmd = "uvicorn item:app --reload" }
